# CppCMakeVcpkgTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
.github/workflows/: hosted-ninja-vcpkg_submod.yml  hosted-pure-workflow.yml
cmake/: WinDeployQt.cmake
src/: mainview.cpp  mainview.h  mainview.ui
